--- a/bookforce/old-app.mdx
+++ b/bookforce/old-app.mdx
@@ -53,14 +53,14 @@ npx expo login
 ngrok http 8012
 ```
 - copiar link que se genere y pegar en lista de picker de screen "landing":
-<img height="301" src=" ../images/ngrok.jpg"  alt="ngrok"/>
+<img height="301" src="../images/ngrok.jpg"  alt="ngrok"/>
 - en WINDOWS abrir una consola de cmd, ejecutar:
 ```
  ipconfig
 ```
 - copiar la dirección IPv4 de la red que estás usando y pegar en el archivo url de la carpeta reducers dentro de redux
 
-estos numeritos
+estos numeritos:
 <img height="260" src=" /images/ipconfig.jpg"  alt="ipconfig"/>
 
 en este archivo
