--- a/bookforce/old-app.mdx
+++ b/bookforce/old-app.mdx
@@ -17,7 +17,7 @@ description: 'para sobrevivir a la app'
 ngrok http 8012
 ```
 - copiar link que se genere y pegar en lista de picker de screen "landing":
-<img height="301" src="/images/ngrok.jpg"  alt="ngrok"/>
+<img height="301" src="../images/ngrok.jpg"  alt="ngrok"/>
 - ejecutar:
 ```
  - npm install 
@@ -61,13 +61,13 @@ ngrok http 8012
 - copiar la dirección IPv4 de la red que estás usando y pegar en el archivo url de la carpeta reducers dentro de redux
 
 estos numeritos:
-<img height="260" src=" /images/ipconfig.jpg"  alt="ipconfig"/>
+<img height="260" src="../images/ipconfig.jpg"  alt="ipconfig"/>
 
 en este archivo
-<img height="216" src=" /images/reducers.jpg"  alt="reducers"/>
+<img height="216" src="../images/reducers.jpg"  alt="reducers"/>
 
 los reemplazas acá
-<img height="128" src=" /images/url.jpg"  alt="url"/>
+<img height="128" src="../images/url.jpg"  alt="url"/>
 
 o no va a funcionar
 - luego de todo, ejecutar:
